# airia-compliance-sentinel

./: README.md  package.json  tailwind.config.ts
backend/: .env.example  pyproject.toml
backend/src/: __init__.py
backend/src/agents/: __init__.py  doc_crawler.py  orchestrator.py  pr_monitor.py  slack_monitor.py
backend/src/api/: __init__.py  main.py
backend/src/models/: __init__.py  compliance.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/analyze/: page.tsx
src/app/findings/: page.tsx
src/app/reviews/: page.tsx
src/lib/: mock-data.ts
